--- a/src/Resources/config/services/resolver.yaml
+++ b/src/Resources/config/services/resolver.yaml
@@ -1,11 +1,18 @@
 services:
-services:
-    asdoria_import.handle_resolver.customer:
-      class: Asdoria\SyliusImportPlugin\Import\Resolver\CustomerHandlerResolver
+    asdoria_import.handle_resolver.base:
+      class: Asdoria\SyliusImportPlugin\Resolver\HandlerResolver
       arguments:
         $serializerServiceRegistry: '@asdoria_import.serializer_service_registry'
       calls:
         - [ 'setLogger', ['@logger']]
+
+    asdoria_import.handle_resolver.customer:
+      parent: asdoria_import.handle_resolver.base
       tags:
-        - { name: asdoria_import_handle_resolver, type: 'App\Entity\Customer\Customer' }
+        - { name: asdoria_import_handler_resolver, type: 'App\Entity\Customer\Customer' }
+
+    asdoria_import.handle_resolver.shop_user:
+      parent: asdoria_import.handle_resolver.base
+      tags:
+        - { name: asdoria_import_handler_resolver, type: 'App\Entity\User\ShopUser' }
 
