--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4| ^8.0",
-        "sylius/sylius": "^1.9"
+        "php": "^8.0",
+        "sylius/sylius": "^1.12"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
